paymnets on small phone fix

--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -586,7 +586,12 @@ input[type="checkbox"].input-validation-error {
     width: 100%;
     background: white;
 }
-
+.payment-container-popup {
+    align-self: center;
+    box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1), 0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+    border-radius: 7px;
+    padding: 5px 5px 5px 5px;
+}
 .payment-container {
     width: 30vw;
     min-width: 500px;
